--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,7 +3,7 @@
 Master Stylesheet
 ----------------------
 
-Template Name : AppLab
+Template Name : 
 Description : 
 Author Name : Shaikh Abu Amer
 Author URL : 
