--- a/assets/scss/main/_normalize.scss
+++ b/assets/scss/main/_normalize.scss
@@ -6,9 +6,10 @@ html {
 body {
     font: {
         family: $main-font;
-        size : 16px;
+        size: 18px;
+        weight: 400;
     }
-    line-height: 26px;
+    line-height: 25px;
     background-color: #fff;
     color: $color-3;
     margin: 0;
