--- a/assets/scss/main/_variables.scss
+++ b/assets/scss/main/_variables.scss
@@ -1,7 +1,7 @@
 // colors
-$main-color : #242f51;
-$color-2 : #FE6282;
-$color-3 : #616368;
+$main-color: #f5286e;
+$color-2: #fc6d43;
+$color-3: #adadad;
 
-// fonts 
-$main-font : 'Poppins', sans-serif;
+// fonts
+$main-font: "Poppins", sans-serif;
