--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,7 +15,7 @@ Table of Content
 
 1. Typography 
 2. Navigation 
-3.
+3. 
 4.
 5.
 6.
@@ -23,13 +23,13 @@ Table of Content
 
 */
 
-
 @import "./main/variables";
+@import "./main/mixins";
 @import "./main/normalize";
 @import "./main/typography";
 @import "./main/global";
 @import "./main/breakpoints";
 
 @import "./sections/header";
-
+@import "./sections/hero";
 @import "./sections/footer";
