--- a/assets/scss/main/_typography.scss
+++ b/assets/scss/main/_typography.scss
@@ -1,33 +1,35 @@
 /*-----------------------------------------------Typography-----------------------------------------------*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
-
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $main-font;
     font-weight: 700;
-    color: $main-color;
 }
 
 h1 {
-    font-weight: 800;
-    font-size: 60px;
-    line-height: 75px;
+    font-size: 55px;
+    line-height: 65px;
 }
 
 h2 {
-    font-size: 50px;
-    line-height: 70px;
+    font-size: 45px;
+    line-height: 60px;
 }
 
 h3 {
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 600;
+    font-size: 25px;
+    line-height: 35px;
+    font-weight: 500;
 }
 
 h4 {
     font-size: 18px;
+    font-weight: 400;
     line-height: 30px;
 }
 
@@ -43,7 +45,7 @@ h6 {
 
 p {
     font-size: 16px;
-    line-height: 26px;
+    line-height: 24px;
     font-weight: 400;
     color: $color-3;
     margin-bottom: 10px;
