--- a/assets/scss/main/_mixins.scss
+++ b/assets/scss/main/_mixins.scss
@@ -2,6 +2,10 @@
     background-image: linear-gradient($main-color, $color-2);
 }
 
+@mixin gradient-y-reverse {
+    background-image: linear-gradient(to top, $main-color, $color-2);
+}
+
 @mixin gradient-x {
     background-image: linear-gradient(to right, $main-color, $color-2);
 }
