--- a/assets/scss/sections/_app.scss
+++ b/assets/scss/sections/_app.scss
@@ -11,6 +11,33 @@
         left: 0;
         right: 0;
         z-index: 1;
+
+        &::before {
+            position: absolute;
+            content: "";
+            width: 63%;
+            height: 63%;
+            background: url(../img/app/app-img.png) no-repeat;
+            z-index: -1;
+            top: 23%;
+            left: 390px;
+        }
+
+        &::after {
+            position: absolute;
+            content: "";
+            width: 225px;
+            height: 50%;
+            background: url(../img/app/tyre-stroke.png) no-repeat;
+            z-index: -1;
+            right: 170px;
+            top: 55%;
+        }
+
+        .row {
+            max-width: 100%;
+            margin: 0 auto;
+        }
     }
 
     .app-content {
