--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,5 +33,6 @@ Table of Content
 @import "./sections/header";
 @import "./sections/hero";
 @import "./sections/booking";
+@import "./sections/guide";
 @import "./sections/app";
 @import "./sections/footer";
