service section added

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,5 +34,6 @@ Table of Content
 @import "./sections/hero";
 @import "./sections/booking";
 @import "./sections/guide";
+@import "./sections/service";
 @import "./sections/app";
 @import "./sections/footer";
