--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,6 +330,46 @@ header .sign-up-btn {
   height: 20px;
 }
 
+#service-section {
+  padding: 60px 0;
+  position: relative;
+}
+#service-section::after {
+  content: "Services";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  font-size: 200px;
+  font-weight: 700;
+  color: #c4c4c4;
+  z-index: -1;
+  text-align: center;
+  line-height: 158px;
+  opacity: 9%;
+}
+#service-section .service-subtitle {
+  text-transform: uppercase;
+}
+#service-section .section-heading {
+  margin-bottom: 70px;
+}
+#service-section .single-service {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+#service-section .single-service img {
+  background-color: #f2f2f2;
+  border: 2px solid white;
+  box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.2);
+  padding: 25px;
+  border-radius: 15px;
+  margin-right: 35px;
+}
+#service-section .single-service-details h3 {
+  font-size: 24px;
+  color: #000;
+}
 #app-section {
   position: relative;
   margin-top: 450px;
