--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,7 +33,8 @@ Table of Content
 @import "./sections/header";
 @import "./sections/hero";
 @import "./sections/booking";
-@import "./sections/guide";
+@import "./sections/proccess";
 @import "./sections/service";
+@import "./sections/guide";
 @import "./sections/app";
 @import "./sections/footer";
