--- a/assets/scss/sections/_footer.scss
+++ b/assets/scss/sections/_footer.scss
@@ -28,7 +28,7 @@ footer {
         display: flex;
         position: relative;
 
-        svg {
+        i {
             position: absolute;
             color: #766e6e;
             left: 15px;
@@ -71,7 +71,7 @@ footer {
 
     .socials {
         margin-top: 30px;
-        svg {
+        i {
             margin-right: 30px;
             border: 2px solid;
             border-radius: 50%;
