--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,8 +576,10 @@ footer .socials i {
   margin-right: 30px;
   border: 2px solid;
   border-radius: 50%;
-  padding: 8px;
-  width: 20px;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 37px;
 }
 footer .footer-bottom {
   font-size: 16px;
