--- a/assets/scss/sections/_footer.scss
+++ b/assets/scss/sections/_footer.scss
@@ -75,8 +75,10 @@ footer {
             margin-right: 30px;
             border: 2px solid;
             border-radius: 50%;
-            padding: 8px;
-            width: 20px;
+            height: 40px;
+            width: 40px;
+            text-align: center;
+            line-height: 37px;
         }
     }
 
