--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -36,5 +36,6 @@ Table of Content
 @import "./sections/proccess";
 @import "./sections/service";
 @import "./sections/guide";
+@import "./sections/experience";
 @import "./sections/app";
 @import "./sections/footer";
