--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -35,6 +35,7 @@ Table of Content
 @import "./sections/booking";
 @import "./sections/proccess";
 @import "./sections/service";
+@import "./sections/choose";
 @import "./sections/guide";
 @import "./sections/experience";
 @import "./sections/app";
