--- a/assets/scss/sections/_booking.scss
+++ b/assets/scss/sections/_booking.scss
@@ -1,14 +1,20 @@
 #booking-section {
     padding: 30px 0;
 
-    .select-proccess {
+    .select-process {
         box-shadow: 0px 5px 50px rgb(0 0 0 / 10%);
         border-radius: 10px;
         padding: 20px;
 
-        svg {
+        i {
             color: #000;
         }
+    }
+    input {
+        width: 100%;
+        border: 0;
+        outline: 0;
+        margin-left: 10px;
     }
     .form-select {
         border: 0px;
