--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -451,6 +451,7 @@ header .sign-up-btn {
   width: 50%;
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+  display: flex;
 }
 #choose-section .search-city i {
   position: absolute;
@@ -461,7 +462,7 @@ header .sign-up-btn {
   transform: translate(0, -50%);
 }
 #choose-section .search-city input {
-  width: 60%;
+  width: 70%;
   font-size: 16px;
   font-weight: 400;
   border: 0;
